--- a/1.0-el-unet.ipynb
+++ b/1.0-el-unet.ipynb
@@ -34,11 +34,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
     "class DoubleConv(nn.Module):\n",
+    "    \"\"\" [(Conv2d) => (BN) => (ReLu)] * 2 \"\"\"\n",
+    "    \n",
     "    def __init__(self,in_channels,out_channels) -> None:\n",
     "        super().__init__()\n",
     "        self.double_conv = nn.Sequential(\n",
@@ -56,11 +58,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
     "class DownSample(nn.Module):\n",
+    "    \"\"\" MaxPool => DoubleConv \"\"\"\n",
     "    def __init__(self,in_channels,out_channels) -> None:\n",
     "        super().__init__()\n",
     "        self.down_sample = nn.Sequential(\n",
@@ -74,18 +77,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "class UpSample(nn.Module):\n",
-    "    def __init__(self,in_channels,out_channels,c) -> None:\n",
+    "    def __init__(self,in_channels,out_channels,c:int) -> None:\n",
+    "        \"\"\" UpSample input tensor by a factor of `c`\n",
+    "                - the value of base 2 log c defines the number of upsample \n",
+    "                layers that will be applied\n",
+    "        \"\"\"\n",
     "        super().__init__()\n",
-    "        c = 0 if c == 0 else int(math.log(c,2))\n",
+    "        n = 0 if n == 0 else int(math.log(c,2))\n",
     "\n",
     "        self.upsample = nn.ModuleList(\n",
-    "            [nn.ConvTranspose2d(in_channels,in_channels,2,2) for i in range(c)]\n",
+    "            [nn.ConvTranspose2d(in_channels,in_channels,2,2) for i in range(n)]\n",
     "        )\n",
     "        self.conv_3 = nn.Conv2d(in_channels,out_channels,3,padding=\"same\",stride=1)\n",
     "\n",
@@ -96,8 +103,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Construct ELUnet"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,69 +188,43 @@
     "            self.up_64_64(x)\n",
     "        ],dim=1))\n",
     "\n",
-    "        return self.out_conv(x_dec_1)\n",
-    "       \n",
-    "\n",
-    "                \n",
-    "        "
+    "        return self.out_conv(x_dec_1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([1, 128, 128, 128])\n",
-      "torch.Size([1, 256, 64, 64])\n",
-      "torch.Size([1, 512, 32, 32])\n",
-      "torch.Size([1, 1024, 16, 16])\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "torch.Size([1, 1, 256, 256])"
+       "torch.Size([1, 3, 256, 256])"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "elunet = ELUnet(1,1)\n",
+    "elunet = ELUnet(1,3)\n",
     "x = torch.randn(1,1,256,256)\n",
     "elunet(x).shape\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 173,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([1, 128, 128, 128])\n",
-      "torch.Size([1, 256, 64, 64])\n",
-      "torch.Size([1, 512, 32, 32])\n",
-      "torch.Size([1, 1024, 16, 16])\n",
-      "torch.Size([1, 128, 128, 128])\n",
-      "torch.Size([1, 256, 64, 64])\n",
-      "torch.Size([1, 512, 32, 32])\n",
-      "torch.Size([1, 1024, 16, 16])\n",
-      "torch.Size([1, 128, 128, 128])\n",
-      "torch.Size([1, 256, 64, 64])\n",
-      "torch.Size([1, 512, 32, 32])\n",
-      "torch.Size([1, 1024, 16, 16])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from torch.utils.tensorboard import SummaryWriter\n",
     "tb = SummaryWriter()\n",
@@ -246,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
