--- a/1.0-el-unet.ipynb
+++ b/1.0-el-unet.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"elunet_arch.png\"  width=\"300\" height=\"300\">"
+    "<img src=\"img/elunet_arch.png\"  width=\"300\" height=\"300\">"
    ]
   },
   {
