--- a/1.0-el-unet.ipynb
+++ b/1.0-el-unet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
     "                layers that will be applied\n",
     "        \"\"\"\n",
     "        super().__init__()\n",
-    "        n = 0 if n == 0 else int(math.log(c,2))\n",
+    "        n = 0 if c == 0 else int(math.log(c,2))\n",
     "\n",
     "        self.upsample = nn.ModuleList(\n",
     "            [nn.ConvTranspose2d(in_channels,in_channels,2,2) for i in range(n)]\n",
@@ -111,46 +111,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1024"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2*8*64"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "class ELUnet(nn.Module):\n",
-    "    def __init__(self,in_channels,out_channels) -> None:\n",
+    "    def __init__(self,in_channels,out_channels,n:int = 8) -> None:\n",
+    "        \"\"\" \n",
+    "        Construct the Elu-net model.\n",
+    "        Args:\n",
+    "            in_channels: The number of color channels of the input image. 0:for binary 3: for RGB\n",
+    "            out_channels: The number of color channels of the input mask, corresponds to the number\n",
+    "                            of classes.Includes the background\n",
+    "            n: Channels size of the first CNN in the encoder layer. The bigger this value the bigger \n",
+    "                the number of parameters of the model\n",
+    "        \"\"\"\n",
     "        super().__init__()\n",
     "        # ------ Input convolution --------------\n",
-    "        self.in_conv = DoubleConv(in_channels,64)\n",
+    "        self.in_conv = DoubleConv(in_channels,n)\n",
     "        # -------- Encoder ----------------------\n",
-    "        self.down_1 = DownSample(64,128)\n",
-    "        self.down_2 = DownSample(128,256)\n",
-    "        self.down_3 = DownSample(256,512)\n",
-    "        self.down_4 = DownSample(512,1024)\n",
+    "        self.down_1 = DownSample(n,2*n)\n",
+    "        self.down_2 = DownSample(2*n,4*n)\n",
+    "        self.down_3 = DownSample(4*n,8*n)\n",
+    "        self.down_4 = DownSample(8*n,16*n)\n",
     "        \n",
     "        # -------- Upsampling ------------------\n",
-    "        self.up_1024_512 = UpSample(1024,512,2)\n",
+    "        self.up_1024_512 = UpSample(16*n,8*n,2)\n",
     "\n",
-    "        self.up_512_64 = UpSample(512,64,8)\n",
-    "        self.up_512_128 = UpSample(512,128,4)\n",
-    "        self.up_512_256 = UpSample(512,256,2)\n",
-    "        self.up_512_512 = UpSample(512,512,0)\n",
+    "        self.up_512_64 = UpSample(8*n,n,8)\n",
+    "        self.up_512_128 = UpSample(8*n,2*n,4)\n",
+    "        self.up_512_256 = UpSample(8*n,4*n,2)\n",
+    "        self.up_512_512 = UpSample(8*n,8*n,0)\n",
     "\n",
-    "        self.up_256_64 = UpSample(256,64,4)\n",
-    "        self.up_256_128 = UpSample(256,128,2)\n",
-    "        self.up_256_256 = UpSample(256,256,0)\n",
+    "        self.up_256_64 = UpSample(4*n,n,4)\n",
+    "        self.up_256_128 = UpSample(4*n,2*n,2)\n",
+    "        self.up_256_256 = UpSample(4*n,4*n,0)\n",
     "\n",
-    "        self.up_128_64 = UpSample(128,64,2)\n",
-    "        self.up_128_128 = UpSample(128,128,0)\n",
+    "        self.up_128_64 = UpSample(2*n,n,2)\n",
+    "        self.up_128_128 = UpSample(2*n,2*n,0)\n",
     "\n",
-    "        self.up_64_64 = UpSample(64,64,0)\n",
+    "        self.up_64_64 = UpSample(n,n,0)\n",
     "     \n",
     "        # ------ Decoder block ---------------\n",
-    "        self.dec_4 = DoubleConv(1024,512)\n",
-    "        self.dec_3 = DoubleConv(768,256)\n",
-    "        self.dec_2 = DoubleConv(512,128)\n",
-    "        self.dec_1 = DoubleConv(320,64)\n",
+    "        self.dec_4 = DoubleConv(2*8*n,8*n)\n",
+    "        self.dec_3 = DoubleConv(3*4*n,4*n)\n",
+    "        self.dec_2 = DoubleConv(4*2*n,2*n)\n",
+    "        self.dec_1 = DoubleConv(5*n,n)\n",
     "        # ------ Output convolution\n",
     "\n",
-    "        self.out_conv = DoubleConv(64,out_channels)\n",
+    "        self.out_conv = DoubleConv(n,out_channels)\n",
     "\n",
     "    def forward(self,x):\n",
     "        x = self.in_conv(x) # 64\n",
@@ -200,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -209,42 +238,38 @@
        "torch.Size([1, 3, 256, 256])"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "elunet = ELUnet(1,3)\n",
+    "elunet = ELUnet(1,3,64)\n",
     "x = torch.randn(1,1,256,256)\n",
     "elunet(x).shape\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from torch.utils.tensorboard import SummaryWriter\n",
+    "\"\"\" from torch.utils.tensorboard import SummaryWriter\n",
     "tb = SummaryWriter()\n",
     "tb.add_graph(elunet,x)\n",
-    "tb.close()"
+    "tb.close() \"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([2, 128, 128, 128])\n",
-      "torch.Size([2, 256, 64, 64])\n",
-      "torch.Size([2, 512, 32, 32])\n",
-      "torch.Size([2, 1024, 16, 16])\n",
       "----------------------------------------------------------------\n",
       "        Layer (type)               Output Shape         Param #\n",
       "================================================================\n",
@@ -361,22 +386,22 @@
       "     BatchNorm2d-111         [-1, 64, 256, 256]             128\n",
       "            ReLU-112         [-1, 64, 256, 256]               0\n",
       "      DoubleConv-113         [-1, 64, 256, 256]               0\n",
-      "          Conv2d-114          [-1, 1, 256, 256]             577\n",
-      "     BatchNorm2d-115          [-1, 1, 256, 256]               2\n",
-      "            ReLU-116          [-1, 1, 256, 256]               0\n",
-      "          Conv2d-117          [-1, 1, 256, 256]              10\n",
-      "     BatchNorm2d-118          [-1, 1, 256, 256]               2\n",
-      "            ReLU-119          [-1, 1, 256, 256]               0\n",
-      "      DoubleConv-120          [-1, 1, 256, 256]               0\n",
+      "          Conv2d-114          [-1, 3, 256, 256]           1,731\n",
+      "     BatchNorm2d-115          [-1, 3, 256, 256]               6\n",
+      "            ReLU-116          [-1, 3, 256, 256]               0\n",
+      "          Conv2d-117          [-1, 3, 256, 256]              84\n",
+      "     BatchNorm2d-118          [-1, 3, 256, 256]               6\n",
+      "            ReLU-119          [-1, 3, 256, 256]               0\n",
+      "      DoubleConv-120          [-1, 3, 256, 256]               0\n",
       "================================================================\n",
-      "Total params: 53,955,279\n",
-      "Trainable params: 53,955,279\n",
+      "Total params: 53,956,515\n",
+      "Trainable params: 53,956,515\n",
       "Non-trainable params: 0\n",
       "----------------------------------------------------------------\n",
       "Input size (MB): 0.25\n",
-      "Forward/backward pass size (MB): 2222.50\n",
-      "Params size (MB): 205.82\n",
-      "Estimated Total Size (MB): 2428.57\n",
+      "Forward/backward pass size (MB): 2229.50\n",
+      "Params size (MB): 205.83\n",
+      "Estimated Total Size (MB): 2435.58\n",
       "----------------------------------------------------------------\n"
      ]
     }
